ChatterBox: SettingsView and ViewModel

--- a/ChatterBox.Client.Presentation.Shared/Views/ContactsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ContactsView.xaml
@@ -59,10 +59,12 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBlock Text="No contacts available" Margin="12,5"
+            <TextBlock Text="No contacts available" Margin="12,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                        Visibility="{Binding IsConversationsListVisible, Converter={StaticResource BooleanToVisibilityInvertedConverter}}" />
-            <TextBlock Text="Chatter members" Margin="12,5"
+            <TextBlock Text="Chatter members" Margin="12,5" HorizontalAlignment="Left" VerticalAlignment="Center"
                        Visibility="{Binding IsConversationsListVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            <Button HorizontalAlignment="Right" FontFamily="Segoe UI Symbol" Content="&#xE115;"
+                    Margin="5" Command="{Binding ShowSettings}"/>
             <ListBox Grid.Row="1"
                      Margin="12,5"
                      ItemsSource="{Binding Conversations}"
@@ -121,6 +123,9 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
-
+        <Grid Grid.Column="1"
+              Visibility="{Binding IsSettingsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <views:SettingsView DataContext="{Binding SettingsViewModel}" />
+        </Grid>
     </ItemsControl>
 </UserControl>
