--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -8,8 +8,8 @@
     xmlns:services="using:ChatterBox.Client.Presentation.Shared.Services"
     xmlns:converters="using:ChatterBox.Client.Presentation.Shared.Converters"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignHeight="768"
+    d:DesignWidth="1024">
 
     <UserControl.Resources>
         <services:ServicesBindingHelper x:Key="ServicesBindingHelper" />
@@ -51,6 +51,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal">
             <Button Name="CloseButton"
@@ -58,11 +59,10 @@
                     Margin="12,5"
                     Background="{ThemeResource ButtonBackgroundThemeBrush}"
                     FontFamily="Segoe UI Symbol"
-                    Content="&#xE112;"
-                    Grid.Row="2" />
+                    Content="&#xE112;" />
         </StackPanel>
-        <ScrollViewer Grid.Row="2">
-            <ItemsControl Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Grid.Row="1"
+        <ScrollViewer Grid.Row="1">
+            <ItemsControl Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                           Style="{Binding Source={StaticResource ServicesBindingHelper}, Path=LayoutService.LayoutType, Converter={StaticResource LayoutTypeToStyleConverter}}">
                 <Grid Name="WebRTCSettingsPanel" HorizontalAlignment="Stretch" MaxWidth="500" Margin="10">
                     <Grid.RowDefinitions>
@@ -145,19 +145,20 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-                    <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center"
-                               FontSize="18" FontWeight="Bold" Grid.Row="0" />
-                    <TextBlock Text="Registerd name" Margin="5" Grid.Row="1"
-                               HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding RegisteredName}" IsEnabled="False"
-                             HorizontalAlignment="Stretch" Grid.Row="2" />
-                    <TextBlock Text="Registerd domain" Margin="5" Grid.Row="3"
-                               HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding RegisteredDomain}" IsEnabled="False"
-                             HorizontalAlignment="Stretch" Grid.Row="4" />
+                    <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
+                               FontWeight="Bold" Grid.Row="0" />
+                    <TextBlock Text="Signaling Server Host" Margin="5" Grid.Row="1" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding SignalingServerHost}" HorizontalAlignment="Stretch" Grid.Row="2" />
+                    <TextBlock Text="Signaling Server Port" Margin="5" Grid.Row="3" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding SignalingServerPort}" HorizontalAlignment="Stretch" Grid.Row="4" />
+                    <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
+                    <TextBox Text="{Binding Domain}" HorizontalAlignment="Stretch" Grid.Row="6" />
                 </Grid>
             </ItemsControl>
         </ScrollViewer>
+        <Button Grid.Row="2" Content="Save" Command="{Binding SaveCommand}" HorizontalAlignment="Right" Margin="15" />
     </Grid>
 </UserControl>
