--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -151,11 +151,11 @@
                     <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
                                FontWeight="Bold" Grid.Row="0" />
                     <TextBlock Text="Signaling Server Host" Margin="5" Grid.Row="1" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerHost}" HorizontalAlignment="Stretch" Grid.Row="2" />
+                    <TextBox Text="{Binding SignalingServerHost, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="2" />
                     <TextBlock Text="Signaling Server Port" Margin="5" Grid.Row="3" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerPort}" HorizontalAlignment="Stretch" Grid.Row="4" />
+                    <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" />
                     <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding Domain}" HorizontalAlignment="Stretch" Grid.Row="6" />
+                    <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6" />
                 </Grid>
             </ItemsControl>
         </ScrollViewer>
