Added background rendering to ChatterBox
Note: This patch has only been tested on a desktop

Known issues:
- the rendering orientation is not properly sent to the foreground so the layout may not look aligned and video may be rotated 90 degrees
- hang-up does not stop the video sometimes
- placeholder pictures are still used
- signaling connection loss will not recover (must re-login to ensure processes are terminated)

--- a/ChatterBox.Client.Universal/Views/CallView.xaml
+++ b/ChatterBox.Client.Universal/Views/CallView.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="using:ChatterBox.Client.Presentation.Shared.Converters"
+    xmlns:webrtc="using:ChatterBox.Client.WebRTCSwapChainPanel"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -25,8 +26,10 @@
               SizeChanged="VideoGrid_SizeChanged"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch">
-            <MediaElement Name="PeerVideo"
+            <webrtc:WebRTCSwapChainPanel Name="PeerVideo"
                           Visibility="{Binding IsPeerVideoAvailable, Converter={StaticResource BooleanToVisibilityConverter}}"
+                          SwapChainPanelHandle="{Binding RemoteSwapChainPanelHandle, Mode=OneWay}"
+                          NativeVideoSize="{Binding RemoteNativeVideoSize}"
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Stretch" />
             <Image Name="PeerPlaceholder"
@@ -34,11 +37,14 @@
                    Source="{Binding ProfileSource}"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch" />
-            <MediaElement Name="SelfVideo"
-                          Margin="5"
+
+            <webrtc:WebRTCSwapChainPanel Name="SelfVideo"
                           Visibility="{Binding IsSelfVideoAvailable, Converter={StaticResource BooleanToVisibilityConverter}}"
+                          SwapChainPanelHandle="{Binding LocalSwapChainPanelHandle, Mode=OneWay}"
+                          NativeVideoSize="{Binding LocalNativeVideoSize}"
                           HorizontalAlignment="Right"
                           VerticalAlignment="Bottom" />
+
             <Image Name="SelfPlaceholder"
                    Margin="5"
                    Source="{Binding OwnProfileSource}"
