--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -147,6 +147,8 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
                                FontWeight="Bold" Grid.Row="0" />
@@ -156,6 +158,9 @@
                     <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" />
                     <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
                     <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6" />
+                    <TextBlock Text="About" Margin="10" HorizontalAlignment="Center" FontSize="18"
+                               FontWeight="Bold" Grid.Row="7" />
+                    <TextBlock Text="{Binding ApplicationVersion}" Margin="5" Grid.Row="8" HorizontalAlignment="Left" />
                 </Grid>
             </ItemsControl>
         </ScrollViewer>
