--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -45,6 +45,7 @@
         <converters:LayoutTypeToStyleConverter x:Key="LayoutTypeToStyleConverter"
                                                ParallelStyle="{StaticResource ParallelStyle}"
                                                OverlayStyle="{StaticResource OverlayStyle}" />
+        <converters:BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
     </UserControl.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -71,6 +72,9 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -128,14 +132,57 @@
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                    <ComboBox Name="VideoResolutionCombo" Header="Capture resolution:" Grid.Row="7" Margin="5"
+                    <ComboBox Name="VideoResolutionCombo" Header="Capture resolution" Grid.Row="7" Margin="5"
                               HorizontalAlignment="Stretch" ItemsSource="{Binding AllCapRes, Mode=OneWay}"
                               SelectedItem="{Binding SelectedCapResItem, Mode=TwoWay}" />
-                    <ComboBox Name="VideoFrameRateCombo" Header="Capture frame rate:" Grid.Row="8"
+                    <ComboBox Name="VideoFrameRateCombo" Header="Capture frame rate" Grid.Row="8"
                               Margin="5" HorizontalAlignment="Stretch"
                               DisplayMemberPath="FrameRateDescription"
                               ItemsSource="{Binding AllCapFPS, Mode=OneWay}"
                               SelectedItem="{Binding SelectedCapFPSItem, Mode=TwoWay}" />
+                    <TextBlock Name="IceSeversListBoxHeader" Text="ICE Servers" Margin="5"
+                               HorizontalAlignment="Left" Grid.Row="9" />
+                    <Button Name="AddIceServerButton" Grid.Row="9" HorizontalAlignment="Right"
+                            FontFamily="Segoe UI Symbol" Content="&#xE109;"
+                            Command="{Binding AddIceServerCommand}" Margin="5" />
+                    <ListBox Name="IceServersListBox" Grid.Row="10" ItemsSource="{Binding IceServers}"
+                             MinHeight="120" SelectedItem="{Binding SelectedIceServer, Mode=TwoWay}"
+                             Margin="5" BorderBrush="Black" BorderThickness="1">
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid HorizontalAlignment="Stretch">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBox Grid.Row="0" Text="{Binding Url, Mode=TwoWay}" Margin="5" PlaceholderText="URL"
+                                             Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"/>
+                                    <TextBox Grid.Row="1" Text="{Binding Username, Mode=TwoWay}" Margin="5" 
+                                             PlaceholderText="Username" Grid.Column="0"/>
+                                    <TextBox Grid.Row="2" Text="{Binding Password, Mode=TwoWay}" Margin="5"
+                                             PlaceholderText="Password" Grid.Column="0" />
+                                    <Button Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right"
+                                            Command="{Binding ElementName=IceServersListBox, Path=DataContext.DeleteIceServerCommand}" 
+                                            CommandParameter="{Binding}" Name="DeleteIceServerButton"
+                                            FontFamily="Segoe UI Symbol" Content="&#xE106;"
+                                            Visibility="{Binding IsSelected, Converter={StaticResource BoolToVisConverter}}"/>
+                                    <Border Grid.Row="3" Margin="5" HorizontalAlignment="Stretch" Grid.ColumnSpan="2"
+                                            BorderBrush="DarkGray" BorderThickness="0,0,0,1" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </Grid>
                 <Grid Name="ChatterBoxSettingsPanel" Grid.Row="1" Grid.Column="1" MaxWidth="500"
                       HorizontalAlignment="Stretch" Margin="10">
