ChatterBox: Added microphone mute/unmute
Validation scenario #1
- Establish an audio/video call between two ChatterBox clients (WP8.1/W10)
- Validate mute/unmute functionality by pressing the the microphone button

Validation scenario #2
- Initiate an audio/video call from client A to client B
- Mute/unmute microphone before client B answers the call
- Answer the call on client B
- Validate microphone is muted/unmuted
- Validate mute/unmute functionality by pressing the the microphone button

--- a/ChatterBox.Client.Presentation.Shared/Views/CallView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/CallView.xaml
@@ -56,7 +56,7 @@
             <Button Command="{Binding RejectCommand}" Margin="5" Foreground="Red" FontFamily="Segoe UI Symbol"
                     Content="&#xE137;"
                     Visibility="{Binding IsLocalRinging, Converter={StaticResource BooleanToVisibilityConverter}}" />
-            <Button Command="{Binding SwitchMic}" Margin="5" FontFamily="Segoe UI Symbol" Content="&#xE1D6;"
+            <Button Command="{Binding SwitchMicCommand}" Margin="5" FontFamily="Segoe UI Symbol" Content="&#xE1D6;"
                     Foreground="{Binding IsMicEnabled, Mode=OneWay, Converter={StaticResource BoolToBrushConverter}}" />
             <Button Command="{Binding SwitchVideo}" Margin="5" FontFamily="Segoe UI Symbol" Content="&#xE116;"
                     Foreground="{Binding IsVideoEnabled, Mode=OneWay, Converter={StaticResource BoolToBrushConverter}}" />
