--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:services="using:ChatterBox.Client.Presentation.Shared.Services"
     xmlns:converters="using:ChatterBox.Client.Presentation.Shared.Converters"
+    xmlns:behaviors="using:ChatterBox.Client.Presentation.Shared.Behaviors"
     mc:Ignorable="d"
     d:DesignHeight="768"
     d:DesignWidth="1024">
@@ -167,10 +168,13 @@
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
                                     <TextBox Grid.Row="0" Text="{Binding Url, Mode=TwoWay}" Margin="5" PlaceholderText="URL"
+                                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True"
                                              Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"/>
                                     <TextBox Grid.Row="1" Text="{Binding Username, Mode=TwoWay}" Margin="5" 
+                                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True"
                                              PlaceholderText="Username" Grid.Column="0"/>
                                     <TextBox Grid.Row="2" Text="{Binding Password, Mode=TwoWay}" Margin="5"
+                                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True"
                                              PlaceholderText="Password" Grid.Column="0" />
                                     <Button Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right"
                                             Command="{Binding ElementName=IceServersListBox, Path=DataContext.DeleteIceServerCommand}" 
@@ -201,11 +205,14 @@
                     <TextBlock Text="ChatterBox Settings" Margin="5" HorizontalAlignment="Center" FontSize="18"
                                FontWeight="Bold" Grid.Row="0" />
                     <TextBlock Text="Signaling Server Host" Margin="5" Grid.Row="1" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerHost, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="2" />
+                    <TextBox Text="{Binding SignalingServerHost, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="2" 
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
                     <TextBlock Text="Signaling Server Port" Margin="5" Grid.Row="3" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" />
+                    <TextBox Text="{Binding SignalingServerPort, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="4" 
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
                     <TextBlock Text="Domain" Margin="5" Grid.Row="5" HorizontalAlignment="Left" />
-                    <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6" />
+                    <TextBox Text="{Binding Domain, Mode=TwoWay}" HorizontalAlignment="Stretch" Grid.Row="6"
+                             behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True" />
                     <ToggleSwitch Header="AppInsight Logging" Grid.Row="7" IsOn="{Binding AppInsightsEnabled, Mode=TwoWay}"
                       Width="Auto" MinWidth="200" Visibility="{Binding IsWin10App}"/>
                     <TextBlock Text="About" Margin="10" HorizontalAlignment="Center" FontSize="18"
