--- a/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:ChatterBox.Client.Presentation.Shared.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:behaviors="using:ChatterBox.Client.Presentation.Shared.Behaviors"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -34,6 +35,7 @@
                        Grid.Row="1"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding Name, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}"
+                     behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True"
                      Margin="0,10,0,20"
                      Grid.Row="2"
                      MinWidth="150" />
@@ -42,6 +44,7 @@
                        Grid.Row="3"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding Domain, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}"
+                     behaviors:ReturnKeyCloseKeyboardBehavior.Enabled="True"
                      Margin="0,10,0,20"
                      Grid.Row="4"
                      MinWidth="150" />
